removed the ugly confidence w2v fix